--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "homepage": "http://nilu2039.github.io/chatter",
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
-    "firebase": "^8.2.4",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
+    "firebase": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.2",
     "react-scrollable-feed": "^1.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
