--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whatsapp-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nilu2039.github.io/chatter",
+  "homepage": "http://nilu2039.github.io/chatio",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
